fix bleed CSS

--- a/sentinel/src/components/SignIn.css
+++ b/sentinel/src/components/SignIn.css
@@ -56,7 +56,7 @@ body {
 }
 
 .signin-page {
-    padding: 10%;
+    
     color: #a083c9;
     min-height: 100vh;
     margin: 0;
@@ -66,6 +66,6 @@ body {
 }
 
 p {
-    color: white;
+    color: black;
     font-size: 15px;
 }
